GPC/tests/examples/fail/modDoubles.gpc


double x = 2.0;
double y = 6.0;
double z = y % x;

double GPRM::Test::modDoubles() {
    return z;
}
